deployment.yaml
### apiVersion: v1
### kind: Service
### metadata:
###   name: nginx-deployment
###   labels:
###     run: nginx-deployment
### spec:
###   ports:
###   - port: 80
###     protocol: TCP
###   selector:
###     run: nginx-deployment
### ---
### apiVersion: apps/v1
### kind: Deployment
### metadata:
###   name: nginx-deployment
### spec:
###   selector:
###     matchLabels:
###       run: nginx-deployment
###   replicas: 1
###   template:
###     metadata:
###       labels:
###         run: nginx-deployment
###     spec:
###       containers:
###       - name: nginx-deployment
###         image: nginx
###         ports:
###         - containerPort: 80


apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginx
