Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
      - "kubernetes.project.dev"
    secretName: nginxsecret-v5
  ingressClassName: nginx
  rules:
    - host: "kubernetes.project.dev"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nginxsvc
              port:
                number: 80
